--- a/src/instructor-application.html
+++ b/src/instructor-application.html
@@ -8,8 +8,10 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-
   <secrion class="instructor-app">
+    <div class="instructor-app__hero">
+      <img class="mb-8 whoflex-logo" src="images/logo-color.png" alt="logo" />
+    </div>
     <div class="instructor-app__wrapper">
       <h1 class="instructor-app__title">Instructor Application</h1>
       <form class="instructor-app__form" action="#">
