--- a/src/reviews.html
+++ b/src/reviews.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <section>
-        <div class="arent full">
+        <div class="arent full arent__review">
             @@include('./html-templates/arent.html',{
             img: "reviews-not.svg",
             title: "There aren't any reviews yet",
