--- a/src/reviews.html
+++ b/src/reviews.html
@@ -32,7 +32,7 @@
         <div class="notebook__search">
             <div class="search">
                 <form action="">
-                    <h3 class="search__title">Find in Reviews</h3>
+                    <h3 class="search__title">Find in Notebook</h3>
                     <div class="search__input-wrap">
                         <input type="text" placeholder="Search">
                         <button type="submit">
