--- a/src/reviews.html
+++ b/src/reviews.html
@@ -98,7 +98,9 @@
                                 </svg>
                                 Why the future of work matters (00:24)
                             </h4>
-                            <p class="accordion__notebook-text">Pandemic integrated your work, etc...</p>
+                            <div class="accordion__notebook-wrap-text">
+                                <p class="accordion__notebook-text">Pandemic integrated your work, etc...</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -129,7 +131,9 @@
                                 </svg>
                                 Develop adaptability (00:32)
                             </h4>
-                            <p class="accordion__notebook-text">this is very helpful to save this note. this is very helpful to save this note. this is very helpful to save this note. this is very helpful to save this note. </p>
+                            <div class="accordion__notebook-wrap-text">
+                                <p class="accordion__notebook-text">this is very helpful to save this note. this is very helpful to save this note. this is very helpful to save this note. this is very helpful to save this note. </p>
+                            </div>
                         </div>
                         <div class="accordion__body-wrap">
                             <div class="accordion__svg">
@@ -153,7 +157,9 @@
                                 </svg>
                                 Develop adaptability (00:32)
                             </h4>
-                            <p class="accordion__notebook-text">this is very helpful to save this note. this is very helpful to save this note. this is very helpful to save this note. this is very helpful to save this note. </p>
+                            <div class="accordion__notebook-wrap-text">
+                                <p class="accordion__notebook-text">this is very helpful to save this note. this is very helpful to save this note. this is very helpful to save this note. this is very helpful to save this note. </p>
+                            </div>
                         </div>
                     </div>
                 </div>
