--- a/src/reviews.html
+++ b/src/reviews.html
@@ -55,13 +55,12 @@
         </div>
         <div class="notebook__wrap">
             <div class="wrap-textarea">
-                <textarea class="whoflex-textarea" id="createText" placeholder="Type your note here to save for later..."></textarea>
+                <textarea class="whoflex-textarea" id="createText" maxlength="1000" placeholder="Type your note here to save for later..."></textarea>
             </div>
             <div class="wrap-info">
                 <p><span id="counterAcc">0</span> Notes taken</p>
                 <p>Press Enter to save</p>
             </div>
-
             <div class="accordion">
                 <div class="arent">
                     @@include('./html-templates/arent.html',{
@@ -96,7 +95,9 @@
                                 <svg width="16" height="19" viewBox="0 0 16 19" fill="none">
                                     <path d="M1 1V17.6667L14.5417 9.33333L1 1Z" stroke="#D2B038" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                 </svg>
-                                Why the future of work matters (00:24)
+                                <span>
+                                    Why the future of work matters (00:24)
+                                </span>
                             </h4>
                             <div class="accordion__notebook-wrap-text">
                                 <p class="accordion__notebook-text">Pandemic integrated your work, etc...</p>
@@ -129,7 +130,9 @@
                                 <svg width="16" height="19" viewBox="0 0 16 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M1 1V17.6667L14.5417 9.33333L1 1Z" stroke="#D2B038" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                 </svg>
-                                Develop adaptability (00:32)
+                                <span>
+                                    Develop adaptability (00:32)
+                                </span>
                             </h4>
                             <div class="accordion__notebook-wrap-text">
                                 <p class="accordion__notebook-text">this is very helpful to save this note. this is very helpful to save this note. this is very helpful to save this note. this is very helpful to save this note. </p>
@@ -155,7 +158,9 @@
                                 <svg width="16" height="19" viewBox="0 0 16 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M1 1V17.6667L14.5417 9.33333L1 1Z" stroke="#D2B038" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                 </svg>
-                                Develop adaptability (00:32)
+                                <span>
+                                    Develop adaptability (00:32)
+                                </span>
                             </h4>
                             <div class="accordion__notebook-wrap-text">
                                 <p class="accordion__notebook-text">this is very helpful to save this note. this is very helpful to save this note. this is very helpful to save this note. this is very helpful to save this note. </p>
